

======================================================================
Changes since version 3.3.x

NOTE: Use this section for changes that are NOT included in the 3.3
branch.
======================================================================


General Changes
===============

These entries apply to all relevant language mappings unless otherwise
noted.

- The IceSSL.TrustOnly properties support a new syntax that allows you
  to reject a peer whose distinguished name matches certain criteria.

- IceSSL now compares the host name or IP address in a proxy endpoint
  (if any) against the common name of the server's certificate when
  the property IceSSL.CheckCertName is enabled. This is in addition to
  the existing behavior that compared the host name or IP address
  against the DNS names and IP addresses in the server certificate's
  subject alternative name extension.

- slice2docbook is no longer supported and has been removed from
  the distribution.

- slice2html comments now use a syntax that matches the javadoc
  syntax. Instead of

      module::interface::operation

  slice2html now expects

      module.interface#operation

  Similarly, the link syntax now follows the javadoc syntax. Instead
  of

      [module::interface::operation]

  slice2html now expects

      {@link module.interface#operation}

  The old syntax is still supported; slice2html prints a warning for
  each source file in which it encounters the old syntax.

- A batch invocation will now only throw if the connection associated
  with the proxy failed and there were batch requests queued at the
  time of the failure. If there were no batch requests queued, the
  batch invocation won't throw but will instead try to obtain a new
  connection.

- Added the ability to read properties from the Windows registry. This
  is done by setting the Ice.Config property to a value such as the
  following:

    HKLM\Software\MyCompany\IceProperties
