@@ -138,7 +138,7 @@ public class OutputStreamI implements OutputStream
     {
         if(sz < 0)
         {
-            throw new NegativeSizeException();
+            throw new MarshalException();
         }
 
         _os.writeSize(sz);
